fidoconfig 0.91
---------------

----- cvs ci ------
Tue Jan 25 13:46:13 NOVT 2000
max (patch from Serguei Revtov):
* linkedto: read config file in current directory

----- cvs ci ------
Tue Jan 25 00:43:18 NOVT 2000
max (patch from Serguei Revtov):
* make fidoconfig compiling on sun (makefile.sun)

----- cvs ci ------
Sat Jan 22 11:16:22 NOVT 2000
max:
* delete old level access code

----- cvs ci ------
Sat  22 Jan 2000 00:36:55 CET
tobi (patch from Eduard Dulich)
* improved linkedto srcipt (now also searches include files, and finds
  exact matches)
	
----- cvs ci ------
Fri Jan 21 19:53:20 NOVT 2000
max (patch from Serguei Revtov):
* carbonDelete bugfix
* normal print carbonDelete in tparser
* init netMail field in carbons
* "off" in autoareacreate & autofilecreate tokens

----- cvs ci ------
Thu Jan 20 15:10:29 NOVT 2000
max (patch from Serguei Revtov):
* fecf2fconf: added wthitespace before "-b msgbasetype"
* check second parameter in parseFileName
* carbonDelete don't movin' messages to BadArea now

----- cvs ci ------
Sun Jan 16 14:10:00 CET 2000
sms:
* added warning if dupeHistoryDir is not set
* added "-I../smapi" to husky.lnx

----- cvs ci ------
Mon Jan  3 17:45:54 NOVT 2000                                                   
max (patch from Kolya Nesterov):
* added carbonDelete token (this is really a twit feature)

----- cvs ci ------
Mon Dec 27 23:03:29 NOVT 1999                                                   
max:
* manual means mandatory

----- cvs ci ------
Sat Dec 25 19:27:26 NOVT 1999
max (patch from Kolya Nesterov):
* added memdup()

----- cvs ci ------
Sun Dec 19 22:33:07 CET 1999
mtt:
* fixed -b documentation bug

----- cvs ci ------
Sun Dec 12 22:36:57 CET 1999
mtt:
* added fconf2areabbs (hacked by Grischa Brockhaus)

----- cvs ci ------
Sat Dec 11 19:27:40 1999 
Georgi (patch from Nestyurkin Nikolay, 2:5020/3600):
* added token fileEchoFlavour (flavour for fileecho)
  Warning, please put this token in config, if you use htick!
